--- a/src/App.css
+++ b/src/App.css
@@ -248,17 +248,13 @@ button:hover{
   height: 29vh;
   box-shadow: 0 0 25px -10px #444444;
   border-radius: 2px;
-  transition: background-color .3s;
   cursor: pointer;
 }
 
-.photoItem:hover{
-  background-color: #f3f3f3;
-}
 .photo{
   width: 100%;
   height: 22vh;
-  background-color: #545454;
+  background-color: #f3f3f3;
   border-radius: 2px;
   overflow: hidden;
   text-align: center;
@@ -270,6 +266,20 @@ button:hover{
   font-size: 1.2rem;
   padding: 1vh 0;
 }
+.carousel{
+  display:flex;
+  /* -ms-overflow-style: none; 
+  scrollbar-width: none;  */
+}
+/* .carousel::-webkit-scrollbar {
+  display: none;
+} */
+.carousel img{
+  max-width: 100%;
+  max-height: 70vh;
+  margin-right: 10vh;
+}
+
 .leftButton, .rightButton{
   background-color: #89c1bb;
   width: 10vh;
@@ -296,6 +306,34 @@ button:hover{
   opacity: .8;
   color: #545454;
 }
+
+
+.carouselLeftButton, .carouselRightButton{
+  background-color: #545454;
+  width: 10vh;
+  height: 20vh;
+  position: absolute;
+  opacity: .3;
+  font-size: 3rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: monospace;
+  color: #fff;
+  cursor: pointer;
+}
+.carouselLeftButton{
+  left: 0;
+  border-radius: 0 100px 100px 0;
+}
+.carouselRightButton{
+  right: 0;
+  border-radius: 100px 0 0 100px;
+}
+.carouselLeftButton:hover, .carouselRightButton:hover{
+  opacity: .8;
+}
+
 @media (prefers-reduced-motion: no-preference){
   .mainText{
     animation: moveFromTop ease 1s;
