--- a/src/App.css
+++ b/src/App.css
@@ -228,15 +228,16 @@ button:hover{
 .photoListWrap{
   padding: 1vh;
   display: flex;
-  overflow-y: scroll;
+  overflow-x: scroll;
+  overflow-y: hidden;
   width: 100%;
   -ms-overflow-style: none; 
   scrollbar-width: none; 
   align-items: center;
 }
-/* .photoListWrap::-webkit-scrollbar {
+.photoListWrap::-webkit-scrollbar {
   display: none;
-} */
+}
 .photoList{
   display: inline-flex;
 }
@@ -268,16 +269,17 @@ button:hover{
 }
 .carousel{
   display:flex;
-  /* -ms-overflow-style: none; 
-  scrollbar-width: none;  */
+  -ms-overflow-style: none; 
+  scrollbar-width: none; 
 }
-/* .carousel::-webkit-scrollbar {
-  display: none;
-} */
+
 .carousel img{
+  width:auto;
+  height: auto;
   max-width: 100%;
   max-height: 70vh;
-  margin-right: 10vh;
+  margin-right: 5vh;
+  box-shadow: 0 0 25px -10px #000;
 }
 
 .leftButton, .rightButton{
@@ -305,6 +307,16 @@ button:hover{
 .leftButton:hover, .rightButton:hover{
   opacity: .8;
   color: #545454;
+}
+
+.subtitle{
+  position: fixed;
+  color: #fff;
+  width: 100%;
+  text-align: center;
+  font-size: 1.2rem;
+  bottom: 0;
+  padding-bottom: 5vh;
 }
 
 
@@ -432,7 +444,7 @@ button:hover{
   .navigationWrap ul {
     float: none;
   }
-  .leftButton, .rightButton{
+  .leftButton, .rightButton, .carouselLeftButton, .carouselRightButton{
     display: none;
   }
 }
