--- a/src/App.css
+++ b/src/App.css
@@ -269,16 +269,16 @@ button:hover{
 }
 .carousel{
   display:flex;
+  justify-content: center;
   -ms-overflow-style: none; 
   scrollbar-width: none; 
 }
-
+.imageWrap{
+  min-width: 100vw;
+  text-align: center;
+}
 .carousel img{
-  width:auto;
-  height: auto;
-  max-width: 100%;
-  max-height: 70vh;
-  margin-right: 5vh;
+  max-height: 66vmin;
   box-shadow: 0 0 25px -10px #000;
 }
 
@@ -312,14 +312,39 @@ button:hover{
 .subtitle{
   position: fixed;
   color: #fff;
-  width: 100%;
-  text-align: center;
-  font-size: 1.2rem;
+  width: 96vw;
+  /* text-align: center; */
+  font-size: 1rem;
   bottom: 0;
-  padding-bottom: 5vh;
+  background-color: rgba(0, 0, 0, 0.7);
+  box-shadow: 0 -62px 50px 0px rgba(0, 0, 0, 0.7);
+  display: flex;
+  justify-content: center;
+  /* align-items: center; */
+  height: 30vh;
+  padding: 0 15vw;
+  font-family: arial;
+  left: -13vw;
+  overflow: scroll;
 }
 
-
+.buttonClose{
+  position: fixed;
+  font-family: arial;
+  color: #fff;
+  background-color: #545454;
+  opacity: .3;
+  width: 8vw;
+  height: 8vw;
+  font-size: 2rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 100px;
+  top: 1vw;
+  right: 1vw;
+  cursor: pointer;
+}
 .carouselLeftButton, .carouselRightButton{
   background-color: #545454;
   width: 10vh;
@@ -342,7 +367,7 @@ button:hover{
   right: 0;
   border-radius: 100px 0 0 100px;
 }
-.carouselLeftButton:hover, .carouselRightButton:hover{
+.carouselLeftButton:hover, .carouselRightButton:hover, .buttonClose:hover{
   opacity: .8;
 }
 
