--- a/src/App.css
+++ b/src/App.css
@@ -267,6 +267,9 @@ button:hover{
   font-size: 1.2rem;
   padding: 1vh 0;
 }
+.photoDesc p{
+  font-size: 1rem;
+}
 .carousel{
   display:flex;
   justify-content: center;
